# Compiler-Gazprea

./: .gitignore  working_diff
MeetingNotes/: ASTNodes.md  ErrorHandling.md  ProjectReviewMeetingNotes  ScrumMeetingNotes
grammar/: Gazprea.g4
grammar/.antlr/: Gazprea.interp  GazpreaLexer.interp  GazpreaLexer.java  GazpreaLexer.tokens  GazpreaParser.java
include/: ExprTypeAnnotatorPass.h  SymbolTable.h  SymbolTableDummyPass.h  VisitorPass.h
include/AST/: ASTNodes.h
include/Codegen/: CastOperation.h  CodeGenPass.h
include/Common/: MatchBoolPair.h  TestPasses.h  TreeNode.h  TreeNodeBuilder.h
include/ErrorHandling/: exceptions.h
include/Passes/: ASTBuilderPass.h  ASTPrinterPass.h  ASTPrinterPassWithTypes.h  AssignmentTypeCheckerPass.h  BadStreamPass.h  BubbleGlobalDeclarationPass.h  CallableArgumentTypeCheckingPass.h  ChangeMemAccessToMemRef.h  CheckCopyPass.h  CodeGenPass.h  ContinueAndBreakCheckPass.h  ConvertFuncCallNodesToProcCallPass.h  ConvertIdentMemberAccessToIdxPass.h  EnsureDeclInBeginOfBlock.h  EnsureDefinitionPass.h  EnsureReturnPass.h  EnsureValidGlobalInitPass.h  ExplicitCastCheckPass.h  ExprTypeAnnotatorPass.h  FunctionFlowPass.h  LValueReferenceCheckPass.h  LoopCheckPass.h  LoopIfConditionalTypeCheckPass.h  NullIdentityTypeCastPass.h  Pass.h  PassManager.h  ProcedureCallAliasCheckPass.h  ProcedureCallStatCheckPass.h  ProcedureExpressionCheckPass.h  ReturnValuePromotionPass.h  ScopeResolutionPass.h  SimplifyTupleCasting.h  SubExpressionCacheSet.h  TupleCompToMemberCompPass.h  TupleComparisonToLogicalPass.h  TupleComparisonToMemberAccessPass.h  TupleExplicitTypeCastPass.h  TupleNotEqualTransformationPass.h  TypeBuilderPass.h  TypeDefResolutionPass.h  (+1 more)
include/Passes/BuildAST/: ASTBuilderPass.h  AddingFreeNodesForContinueBreak.h  AddingFreeNodesForReturnPass.h  AddingFreeNodesPass.h  ChangeMemAccessToMemRef.h  ConstantFoldingPass.h  ConvertFuncCallNodesToProcCallPass.h  ConvertIdentMemberAccessToIdxPass.h  ExprTypeAnnotatorPass.h  NullIdentityTypeCastPass.h  ScopeResolutionPass.h
include/Passes/Checks/: AssignmentTypeCheckerPass.h  BadStreamPass.h  CallableArgumentTypeCheckingPass.h  ContinueAndBreakCheckPass.h  EnsureDeclInBeginOfBlock.h  EnsureDefinitionPass.h  EnsureValidGlobalInitPass.h  ExplicitCastCheckPass.h  LValueReferenceCheckPass.h  LoopIfConditionalTypeCheckPass.h  ProcedureCallAliasCheckPass.h  ProcedureCallStatCheckPass.h  ProcedureExpressionCheckPass.h  ReturnValuePromotionPass.h
include/Passes/Transformations/: BubbleGlobalDeclarationPass.h  SimplifyCompositeTypeCasting.h  SimplifyTupleCasting.h  SimplifyTupleLiteralMemberAccess.h  SubExpressionCacheSet.h  TupleCompToMemberCompPass.h  TupleNotEqualTransformationPass.h  TupleUnpackToAssign.h  VectorScalarAppendTransformationPass.h  VectorScalarOpTransformationPass.h
include/Passes/Utils/: ASTPrinterPass.h  ASTPrinterPassWithTypes.h
include/Symbol/: Symbol.h  SymbolTable.h
include/Types/: CompositeTypes.h  Type.h  TypeHelpers.h  TypeRegistry.h
runtime/include/: errors.h  runtime.h  stream_state.h
runtime/src/: CMakeLists.txt  casting.c  copy_ops.c  errors.h  filters.c  matrix.c  matrix_literals.c  placeholder.c  runtime.c  runtime.h  stream_state.h  vectors.c
src/: CMakeLists.txt  ExprTypeAnnotatorPass.cpp  SymbolTable.cpp  SymbolTableDummyPass.cpp  VisitorPass.cpp  main.cpp
src/CodeGen/: CodeGenPass.cpp
src/Codegen/: CastOperation.cpp  CodeGenPass.cpp
src/ErrorHandling/: exceptions.cpp
src/Passes/: ASTBuilderPass.cpp  ASTPrinterPass.cpp  ASTPrinterPassWithTypes.cpp  AssignmentTypeCheckerPass.cpp  BadStreamPass.cpp  BubbleGlobalDeclarationPass.cpp  CallableArgumentTypeCheckingPass.cpp  ChangeMemAccessToMemRef.cpp  CheckCopyPass.cpp  CodeGenPass.cpp  ContinueAndBreakCheckPass.cpp  ConvertFuncCallNodesToProcCallPass.cpp  ConvertIdentMemberAccessToIdxPass.cpp  EnsureDeclInBeginOfBlock.cpp  EnsureDefinitionPass.cpp  EnsureReturnPass.cpp  EnsureValidGlobalInitPass.cpp  ExplicitCastCheckPass.cpp  ExprTypeAnnotatorPass.cpp  FunctionFlowPass.cpp  LValueReferenceCheckPass.cpp  LoopCheckPass.cpp  LoopIfConditionalTypeCheckPass.cpp  NullIdentityTypeCastPass.cpp  ProcedureCallAliasCheckPass.cpp  ProcedureCallStatCheckPass.cpp  ProcedureExpressionCheckPass.cpp  ReturnValuePromotionPass.cpp  ScopeResolutionPass.cpp  SimplifyTupleCasting.cpp  SubExpressionCacheSet.cpp  TupleCompToMemberCompPass.cpp  TupleComparisonToLogicalPass.cpp  TupleComparisonToMemberAccessPass.cpp  TupleExplicitTypeCastPass.cpp  TupleNotEqualTransformationPass.cpp  TypeBuilderPass.cpp  TypeDefResolutionPass.cpp  VisitorPass.cpp
src/Passes/BuildAST/: ASTBuilderPass.cpp  AddingFreeNodesForContinueBreak.cpp  AddingFreeNodesForReturnPass.cpp  AddingFreeNodesPass.cpp  ChangeMemAccessToMemRef.cpp  ConvertFuncCallNodesToProcCallPass.cpp  ConvertIdentMemberAccessToIdxPass.cpp  ExprTypeAnnotatorPass.cpp  NullIdentityTypeCastPass.cpp  ScopeResolutionPass.cpp
src/Passes/Checks/: AssignmentTypeCheckerPass.cpp  BadStreamPass.cpp  CallableArgumentTypeCheckingPass.cpp  ContinueAndBreakCheckPass.cpp  EnsureDeclInBeginOfBlock.cpp  EnsureDefinitionPass.cpp  EnsureReturnPass.cpp  EnsureValidGlobalInitPass.cpp  ExplicitCastCheckPass.cpp  LValueReferenceCheckPass.cpp  LoopIfConditionalTypeCheckPass.cpp  ProcedureCallAliasCheckPass.cpp  ProcedureCallStatCheckPass.cpp  ProcedureExpressionCheckPass.cpp  ReturnValuePromotionPass.cpp
src/Passes/Transformations/: BubbleGlobalDeclarationPass.cpp  SimplifyCompositeTypeCasting.cpp  SimplifyTupleCasting.cpp  SimplifyTupleLiteralMemberAccess.cpp  SubExpressionCacheSet.cpp  TupleCompToMemberCompPass.cpp  TupleNotEqualTransformationPass.cpp  TupleUnpackToAssign.cpp  VectorScalarAppendTransformationPass.cpp  VectorScalarOpTransformationPass.cpp
src/Passes/Utils/: ASTPrinterPass.cpp  ASTPrinterPassWithTypes.cpp
src/Symbol/: Symbol.cpp  SymbolTable.cpp
src/Types/: TypeHelpers.cpp
tests/: GazpreaConfig.json
tests/ErrorTests/Input/: AliasIllegal.in  BadInStream.in  ConstTypeCheck.in  (+1 more)
(+287 files in other folders)
